syntax = "proto3";

package todo.v1;

option go_package = "internal/grpc";

service TodoService {
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
  rpc CreateTodo(CreateTodoRequest) returns (Todo);
}

message ListTodosRequest {}

message Todo {
  int32 id = 1;
  string content = 2;
}

message ListTodosResponse {
  repeated Todo todos = 1;
}

message CreateTodoRequest {
  string content = 1;
}
